# swtoolkit

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  Sandbox.ipynb  index.md  pyproject.toml  readthedocs.yaml  requirements_dev.txt  sandbox_factory.ipynb  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
extras/: arggen.py  sandbox.py  sandbox_enum.py
swtoolkit/: __init__.py  solidworks.py
swtoolkit/api/: assemblydoc.py  com.py  component.py  custompropertymanager.py  doc.py  drawingdoc.py  feature.py  featuremanager.py  modeldoc.py  modeldocextension.py  partdoc.py  solidworks.py
swtoolkit/api/enums/: enum_errors.py  enum_options.py  enum_results.py  enum_states.py  enum_types.py  enum_warnings.py
swtoolkit/api/interfaces/: iassemblydoc.py  icomponent.py  icustompropertymanager.py  idrawingdoc.py  ifeature.py  ifeaturemanager.py  imodeldoc.py  imodeldocextension.py  ipartdoc.py  isldworks.py
swtoolkit/interfaces/: imodeldoc.py  isldworks.py
tests/: __init__.py  conftest.py  test_solidworks.py  test_swtoolkit.py
tests/test_cad/: test_featuretree.SLDPRT  test_native_assembly.SLDASM  test_native_drawing.SLDDRW  test_native_part.SLDPRT  test_summary_info.SLDPRT  ~$test_native_part.SLDPRT
tests/test_cad/test_asm/: 6111K257_SWIVEL LEVELING MOUNT.SLDPRT  TEST-AAA-AA.SLDASM  TEST-AAA-AB.SLDPRT  TEST-BBB-AA.SLDASM  TEST-BBB-AB.SLDPRT  TEST-BBB-AC.SLDPRT
tests/test_cad/test_asm/T6-602S/: T6-602S.SLDASM  _T6-602SWS.SLDPRT  (+5 more)
