[tool.poetry]
name = "swtoolkit"
version = "0.1.1"
description = "A SolidWorks Toolkit for Python"
license = "MIT"
authors = ["Glutenberg <josh@colescanada.com>"]
readme = "README.rst"
repository = "https://github.com/Glutenberg/swtoolkit.git"

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^300"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
